# GraduateProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BT/: header.h  main.cpp  npbparams.h
CG/: main.cpp  npbparams.h
FT/: ft.cpp  global.h  npbparams.h
GPU/: CMakeCache.txt  Makefile  cmake_install.cmake
SyclParallelSTL/: CMakeLists.txt
SyclParallelSTL/cmake/Modules/: FindComputeCpp.cmake
include/: STL.hpp  npb-C.h  range.hpp
lib/: c_print_results.c
pstl/: CMakeLists.txt
pstl/cmake/: FindTBB.cmake
r3test/: main.cpp
